fix: update alignments for GSoD 2021 page

--- a/css/program.css
+++ b/css/program.css
@@ -7,9 +7,9 @@
   height: 100%;
 } */
 
-p {
+/* p {
   padding-left: 2rem;
-}
+} */
 
 .project-list-heading{
   position: relative;
@@ -58,9 +58,20 @@ h4 {
 h1,h2,h3,h4,h5,h6{
   color: var(--color-secondary-dark);
 }
+.program {
+  display: flex;
+}
+.project-details, .community-details {
+  width: 50%;
+}
+.community-details ul {
+  padding: 0px;
+  margin: 0px;
+}
 .program ol {
-  padding-inline-start: 3rem;
+  /* padding-inline-start: 3rem; */
   font-size: inherit;
+  padding: 0px;
 }
 
 .sub_headings {
@@ -444,5 +455,18 @@ img {
     padding-top: 2rem;
     margin-left: 1rem;
     margin-right: 1rem;
+  }
+  .cover{
+    padding: 25px 25px;
+  }
+  .program ol, .program ul{
+    padding: 0px;
+   }
+   .program__subscribe {
+    padding: 25px;
+    margin: 0px;
+   }
+  .project-details, .community-details {
+    width: 100%;
   }
 }
